DDD + spring boot 3 + spring data jdbc